--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -15,12 +15,14 @@
     "@angular/common": "^15.2.0",
     "@angular/compiler": "^15.2.0",
     "@angular/core": "^15.2.0",
+    "@angular/fire": "^7.6.1",
     "@angular/forms": "^15.2.0",
     "@angular/material": "^15.2.9",
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.9",
     "countries-list": "^2.6.1",
+    "firebase": "^9.22.2",
     "rxjs": "~7.8.0",
     "tailwindcss": "^3.3.2",
     "tslib": "^2.3.0",
@@ -31,6 +33,7 @@
     "@angular/cli": "~15.2.7",
     "@angular/compiler-cli": "^15.2.0",
     "@types/jasmine": "~4.3.0",
+    "@types/webrtc": "^0.0.35",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
