--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -21,8 +21,9 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.9",
+    "@firebase/app": "^0.9.13",
     "countries-list": "^2.6.1",
-    "firebase": "^9.22.2",
+    "firebase": "^9.23.0",
     "rxjs": "~7.8.0",
     "tailwindcss": "^3.3.2",
     "tslib": "^2.3.0",
