--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -21,9 +21,11 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.9",
+    "@capacitor/android": "^5.0.5",
     "@firebase/app": "^0.9.13",
     "countries-list": "^2.6.1",
     "firebase": "^9.23.0",
+    "ngx-webcam": "^0.4.1",
     "rxjs": "~7.8.0",
     "tailwindcss": "^3.3.2",
     "tslib": "^2.3.0",
