--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -2,11 +2,9 @@
   "name": "frontend",
   "version": "0.0.0",
   "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "build": "ng build --configuration=production && npx capacitor copy",
+    "ionic:build": "ng build --configuration=production && npx capacitor copy",
+    "ionic:serve": "ng serve"
   },
   "private": true,
   "dependencies": {
@@ -21,13 +19,13 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.9",
-    "@capacitor/android": "^5.0.5",
+    "@capacitor/android": "^5.1.0",
+    "@capacitor/core": "^5.1.0",
+    "@capacitor/ios": "^5.1.0",
     "@firebase/app": "^0.9.13",
     "countries-list": "^2.6.1",
-    "firebase": "^9.23.0",
     "ngx-webcam": "^0.4.1",
     "rxjs": "~7.8.0",
-    "tailwindcss": "^3.3.2",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
@@ -35,6 +33,7 @@
     "@angular-devkit/build-angular": "^15.2.7",
     "@angular/cli": "~15.2.7",
     "@angular/compiler-cli": "^15.2.0",
+    "@capacitor/cli": "^5.1.0",
     "@types/jasmine": "~4.3.0",
     "@types/webrtc": "^0.0.35",
     "jasmine-core": "~4.5.0",
@@ -44,5 +43,9 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
     "typescript": "~4.9.4"
-  }
+  },
+  "description": "This project was generated with [Angular CLI](https://github.com/angular/angular-cli) version 15.2.7.",
+  "main": "index.js",
+  "author": "",
+  "license": "ISC"
 }
